<resources>
    <string name="app_name">recoMenuApp</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="please_create_your_account">Please create your account!</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="like_ingredient">Like Ingredient</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_now">Sign in now</string>
    <string name="please_sign_in_to_continue_our_app">Please sign in to continue our app!</string>
    <string name="sign_in">Sign In</string>
    <string name="pesan">Pesan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mau_makan_apa">Mau makan apa?</string>
    <string name="rekomendasi">Rekomendasi</string>
    <string name="masukkan_keranjang">Masukkan Keranjang</string>
    <string name="pesanan">Pesanan</string>
    <string name="checkout">Checkout</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="ppn">PPN</string>
    <string name="harga">Harga</string>
    <string name="silahkan_scan_barcode_qris">Silahkan Scan Barcode QRIS</string>
    <string name="selesai">Selesai</string>
    <string name="spicy_level">Spicy Level: 0–3</string>

    <string-array name="adapter_ingredient">
        <item>Pepperoni</item>
        <item>Beef</item>
        <item>Chicken</item>
        <item>Tomatoes</item>
        <item>Capsicum</item>
        <item>Peppers</item>
        <item>Sauce</item>
        <item>Mushroom</item>
        <item>Cheese</item>
    </string-array>
</resources>